--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset ="UTF-8"
     <title>BARBEARIA SAH OLIVEIRA</title>
+    <link rel = "stylesheet" herf = "style.css">
 </head>
-<body>
+
+<header>
     <h1>BARBEARIA SAH OLIVEIRA</h1>
-    <p> Localizada no coração da cidade a Barbearia Sah Oliveira, traz para o mercado o que há de melhor para o seu cabelo e barba</p>
+
+    <ul>
+        <li> </li>
+        <li> </li>
+        <li> </li>
+    </ul>
+</header>
+
+<body>
+    <h1 class = "titulo - 1">BARBEARIA SAH OLIVEIRA</h1>
+
+    <p class = "paragrafo 1"> Localizada no coração da cidade a Barbearia Sah Oliveira, traz para o mercado o que há de melhor para o seu cabelo e barba</p>
     <p>Fundada em 2019, a Barbearia Sah Oliveira já é destaque na ctidade e conquista novos clientes a cada dia pelo custo-beneficio dos serviços prestatdos</p>
     <p>Nossa missão é;<strong>"Proporcionar auto- estima e qualidade de vida aos clientes</strong></p>
     <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda o tendimento possui padrão de exelência e agilidade, garantindo a quantidade e satisfação aos clientes.</p>
@@ -17,6 +30,10 @@
         <li>Atendimento aos Clentes</li>
         <li>Espaço diferenciado</li>
         <li>Localização</li>
+        <li>Profissionais Qualificados</li>
     </ul>
+
+
+
 </body>
 </html>
