--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <h1 class = "titulo - 1">BARBEARIA SAH OLIVEIRA</h1>
 
     <p class = "paragrafo 1"> Localizada no coração da cidade a Barbearia Sah Oliveira, traz para o mercado o que há de melhor para o seu cabelo e barba</p>
-    <p>Fundada em 2019, a Barbearia Sah Oliveira já é destaque na ctidade e conquista novos clientes a cada dia pelo custo-beneficio dos serviços prestatdos</p>
-    <p>Nossa missão é;<strong>"Proporcionar auto- estima e qualidade de vida aos clientes</strong></p>
-    <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda o tendimento possui padrão de exelência e agilidade, garantindo a quantidade e satisfação aos clientes.</p>
+    <p clas =  "paragrafo 1">Fundada em 2019, a Barbearia Sah Oliveira já é destaque na ctidade e conquista novos clientes a cada dia pelo custo-beneficio dos serviços prestatdos</p>
+    <p class = "paragrafo 1">Nossa missão é;<strong>"Proporcionar auto- estima e qualidade de vida aos clientes</strong></p>
+    <p clss = "paragrafo 1">Oferecemos profissionais experientes e antenados às mudanças no mundo da moda o tendimento possui padrão de exelência e agilidade, garantindo a quantidade e satisfação aos clientes.</p>
 
     <h2>Benefícios</h2>
 
@@ -33,7 +33,7 @@
         <li>Profissionais Qualificados</li>
     </ul>
 
-
+    
 
 </body>
 </html>
