--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang = "pt-br"
+<html lang = "pt-br">
 <head>
-    <meta charset ="UTF-8"
+    <meta charset ="UTF-8">
     <title>BARBEARIA SAH OLIVEIRA</title>
     <link rel = "stylesheet" herf = "style.css">
 </head>
@@ -34,6 +34,13 @@
     </ul>
 
     
+
+    <footer>
+        <p> PARA MAIS INFORMAÇÕES ACESSE NOSSOS CONTATOS </p>
+    <P>@BARBEARIASAHOLIVEIRA</P>
+<P>Facebook: Barbearia Sah Oliveira</P> 
+<p>TEL: (42) 94002-8922</p>
+</footer>
 
 </body>
 </html>
