--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1>BARBEARIA SAH OLIVEIRA</h1>
 
     <ul>
-        <li> </li>
-        <li> </li>
-        <li> </li>
+        <li> ATENDIMENTO AO CLIENTE </li>
+        <li>  MEUS PRODUTOS </li>
+        <li> HORARIO DE ATENDIMENTO </li>
     </ul>
 </header>
 
